--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,7 +6,9 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-rand = "0.8.4"
-csv = "1.1.6"
-statrs = "0.14.0"
-
+csv = "1.1"
+linfa = "0.6"  
+linfa-clustering = "0.6"  
+ndarray = "0.15" 
+rand = "0.8" 
+serde = "1.0.200"
